# movie_dl

./: .gitignore  Cargo.toml  Cargo.toml.bak  README.md  debug.sh  dl.txt
.github/workflows/: ci.yml  ci.yml.bak
src/: main.rs  main.rs.bak
